# description-parser

./: AtlanticDescriptionParser.spec  INSTALLATION_GUIDE.md  README.md  TESTING_RESULTS_SUMMARY.md  TESTING_SETUP_COMPLETE.md  ToDO.txt  build_executable.bat  build_package.bat  comprehensive_test.py  csv_editor.py  description_dictionary.txt  description_parser.py  implement.txt  main.py  parser3.py  pyproject.toml  run_tests.py  setup_installer.py  test_executable.py  workflow_test.py
config/: replacement_dict.json  replacement_dict.json.bak.json
distribution/: README.md
distribution/config/: miscellaneous.txt  property_corners.txt
distribution/docs/: PACKAGE_README.md  USER_MANUAL.md
distribution/samples/: sample_input.csv
tests/: README.md  __init__.py  conftest.py  test_csv_editor.py  test_description_parser.py  test_integration.py  test_main.py  test_parser3.py
tests/test_data/: parser3_test_input.csv  sample_replacement_dict.json  test_miscellaneous.txt  test_property_corners.txt
